[package]
name = "rstm"
version = "0.0.0"
authors = ["Vadzim Dambrouski <pftbest@gmail.com>"]

[lib]
name = "rstm"
crate-type = ["rlib"]

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem"]

[dependencies]
cortex-m-semihosting = { git = "https://github.com/japaric/cortex-m-semihosting" }
